fixed module-info.java so it opens shit up so entities can be read by org.hibernate.orm