@@ -54,7 +54,21 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>6.0.0.Alpha7</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,6 +78,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.naming</arg>
+                    </compilerArgs>
                     <source>23</source>
                     <target>23</target>
                 </configuration>
